--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="icon" type="image/x-icon" href="technology.ico">
     </head>
     <body>
-        <video controls style="position:absolute;top:0;bottom:0;right:0;left:0;margin:auto;">
+        <video autoplay style="position:absolute;top:0;bottom:0;right:0;left:0;margin:auto;">
             <source src="video.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
           </video>
